<resources>
    <string name="app_name" translatable="false">Vinyl Store</string>
    <string name="tags_section_title">Tags</string>
    <string name="buy_vinyl_button_text">Buy Vinyl</string>
    <string name="plays_title_text">Plays</string>
    <string name="likes_title_text">Likes</string>
    <string name="albums_list_title">Albums</string>
    <string name="artists_activity_title">Artists</string>
    <string name="search_menu_item_title">Search</string>
    <string name="tracks_list_title">Tracks</string>
    <string name="connection_failure">Failed to connect. Check your network connection</string>
    <string name="refresh_on_loading_error_message">Wait until data is loaded</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_catalog">Catalog</string>
    <string name="navigation_favourites">Favourites</string>
    <string name="navigation_cart">Cart</string>
    <string name="cart_title">Cart</string>
    <string name="cart_item_remove_text">Remove</string>
    <string name="cart_item_add_to_favorites">Add To Favorites</string>
</resources>