<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_page"
        android:title="@string/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_outline_home"/>

    <item
        android:id="@+id/catalog_page"
        android:title="@string/navigation_catalog"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_outline_catalog"/>

    <item
        android:id="@+id/favorites_page"
        android:title="@string/navigation_favourites"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_outline_favorite"/>

    <item
        android:id="@+id/cart_page"
        android:title="@string/navigation_cart"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_outline_cart"/>
</menu>