<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.AlbumActivity">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/Widget.Material3.AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/album_screen_toolbar"
            style="@style/Widget.Material3.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorSurface"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:navigationIconTint="?attr/colorOnSurface"
            app:titleTextAppearance="@style/AppBarTitleTextAppearance"
            app:titleTextColor="?attr/colorOnSurface"
            tools:title="Artist - Album Name" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/activity_album_layout"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:background="?attr/colorSurfaceVariant">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/vinyl_vp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/album_iv"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="50dp"
                        android:elevation="4dp"
                        android:padding="4dp"
                        android:src="@drawable/image_placeholder"
                        app:shapeAppearanceOverlay="@style/albumImageViewFrame" />

                </FrameLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/album_name_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:autoSizeTextType="uniform"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-black"
                        android:letterSpacing=".25"
                        android:maxWidth="340dp"
                        android:maxLines="1"
                        android:textSize="24sp"
                        tools:text="Moral Panic" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/plays_layout_cl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/plays_title_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:drawablePadding="4dp"
                                android:text="@string/plays_title_text"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                app:drawableStartCompat="@drawable/ic_baseline_play_arrow"
                                app:drawableTint="?attr/colorOnSurface" />

                            <TextView
                                android:id="@+id/plays_value_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="2dp"
                                android:fontFamily="sans-serif-light"
                                android:maxLines="1"
                                android:text="0"
                                android:textSize="24sp"
                                tools:text="1 425 124" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/release_layout_cl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/release_title_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:drawablePadding="4dp"
                                android:text="@string/likes_title_text"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                app:drawableStartCompat="@drawable/ic_baseline_like"
                                app:drawableTint="?attr/colorOnSurface" />

                            <TextView
                                android:id="@+id/release_value_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="2dp"
                                android:fontFamily="sans-serif-light"
                                android:maxLines="1"
                                android:text="0"
                                android:textSize="24sp"
                                tools:text="64 019" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:backgroundTint="?attr/colorOnSurface"
                        android:text="@string/buy_vinyl_button_text" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/screen_horizontal_margin">

                    <ImageView
                        android:layout_width="@dimen/icon_s_size"
                        android:layout_height="@dimen/icon_s_size"
                        android:src="@drawable/ic_baseline_tag"
                        app:tint="?attr/colorOnSurface" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/tags_section_title"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/tags_cg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:paddingHorizontal="@dimen/screen_horizontal_margin"
                    app:chipSpacingHorizontal="12dp"
                    app:chipSpacingVertical="0dp">

                </com.google.android.material.chip.ChipGroup>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/screen_horizontal_margin">

                    <ImageView
                        android:layout_width="@dimen/icon_s_size"
                        android:layout_height="@dimen/icon_s_size"
                        android:src="@drawable/ic_baseline_tracks"
                        app:tint="?attr/colorOnSurface" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/tracks_list_title"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tracks_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/screen_horizontal_margin"
                    tools:listitem="@layout/track_item" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/activity_album_shimmer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:shimmer_highlight_alpha="0.5">

            <include layout="@layout/shimmer_activity_album" />

        </com.facebook.shimmer.ShimmerFrameLayout>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>